<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">AndroidTrainingDemo</string>
    <string name="main_activity_name">AndroidTrainingMain</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_startup">StartupActivity</string>

    <string name="call_child_intent">call child</string>
    <string name="activity_lifecycle">activity lifecycle</string>
    <string name="create_fragment_text">Create Fragment</string>
    <string name="capture_photo_str">Capture Photo</string>
    <string name="get_gallery_image">Get Gallery Images</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="print_photo">Print Photo</string>
    <string name="bitmap_advance">Bitmap Advance</string>
    <string name="animation">animation</string>
    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="message_empty_layout_changes">Add an item above to get started.</string>

    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>

    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>

    <string name="title_activity_">ActivityA</string>

    <string name="lifecycle_method_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>
    <string name="dialog_text">Simple Dialog</string>

    <string name="on_create">onCreate</string>
    <string name="on_destroy">onDestroy</string>
    <string name="on_start">onStart</string>
    <string name="on_restart">onRestart</string>
    <string name="on_stop">onStop</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>

    <string name="activity_a_label">Activity A</string>
    <string name="activity_b_label">Activity B</string>
    <string name="activity_c_label">Activity C</string>

    <string name="btn_start_a_label">Start A</string>
    <string name="btn_start_b_label">Start B</string>
    <string name="btn_start_c_label">Start C</string>
    <string name="btn_start_dialog_label">Dialog</string>

    <string name="btn_finish_a_label">Finish A</string>
    <string name="btn_finish_b_label">Finish B</string>
    <string name="btn_finish_c_label">Finish C</string>
    <string name="btn_finish_dialog_label">Close</string>

    <string name="on_activity_created">onActivityCreated</string>
    <string name="on_attach">onAttach</string>
    <string name="on_create_view">onCreateView</string>
    <string name="on_destroy_view">onDestroyView</string>
    <string name="on_detach">onDetach</string>
    <string name="on_view_created">onViewCreated</string>
    <string name="action_previous">Previous</string>
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem Ipsum</string>

    <string name="activity_a">Activity A</string>
    <string name="start_a">Start A</string>
    <string name="start_b">Start B</string>
    <string name="start_c">Start C</string>

    <string name="close">Close</string>
    <string name="dialog">Dialog</string>
    <string name="title_activity_activity_b">ActivityB</string>
    <string name="title_activity_activity_c">ActivityC</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_create_fragment">CreateFragmentActivity</string>
    <string name="title_activity_capture_photo">CapturePhotoActivity</string>
    <string name="title_activity_get_gallery_image">GetGalleryImageActivity</string>
    <string name="title_activity_print_photo">PrintPhotoActivity</string>
    <string name="title_activity_bit_map_advance">BitMapAdvanceActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_animation_main">AnimationMainActivity</string>
    <string name="title_activity_crossfade">CrossfadeActivity</string>
    <string name="title_activity_card_flip">CardFlipActivity</string>
    <string name="title_activity_layout_change">LayoutChangeActivity</string>
    <string name="networkDemo">NetWorkDemo</string>
    <string name="title_activity_network_demo">NetworkDemoActivity</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_network_settings">NetworkSettingsActivity</string>
    <string name="xml_error">Error parsing XML.</string>
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="effectiveNav">EffectiveNavigation</string>
    <string name="title_activity_effective_navi">EffectiveNaviActivity</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="title_activity_collection_demo">CollectionDemoActivity</string>
    <string name="shareAction">shareAction</string>
    <string name="title_activity_share_action">ShareActionActivity</string>
    <string name="intro_message">share action provider</string>
    <string name="share_text">이 텍스트는 쉐어 된다</string>
    <string name="actionBarPopup">ActionBarListPopUp</string>
    <string name="title_activity_action_bar_list_pop_up">ActionBarListPopUPActivity</string>
    <string name="menu_remove">remove</string>
    <string name="content_open_popup">content open popup</string>
</resources>
