<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jee.young.androidtrainingdemo.StartupActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:columnCount="2"
                android:rowCount="10">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_child_intent"
                    android:id="@+id/btn_callChild"
                    android:onClick="go_callChild"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_lifecycle"
                    android:id="@+id/btn_lifecycle"
                    android:onClick="go_lifecycle"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_fragment_text"
                    android:id="@+id/btn_createfragment"
                    android:onClick="go_createfragment"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capture_photo_str"
                    android:id="@+id/btn_capture_photo"
                    android:onClick="go_capturephoto"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_gallery_image"
                    android:id="@+id/btn_get_gallery_img"
                    android:onClick="go_getgelleryimage"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print_photo"
                    android:id="@+id/btn_print_photo"
                    android:onClick="go_printPhoto"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animation"
                    android:id="@+id/btn_animation"
                    android:onClick="go_Animation"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/networkDemo"
                    android:id="@+id/btn_networkdemo"
                    android:onClick="go_NetworkDemo"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>